# PhysX-5-CMake-Binaries

./: .gitignore  CMakeLists.txt  README.md
win.x86_64.vc143.mt/debug/: PhysX_64.lib
win.x86_64.vc145.md/debug/: PhysXCommon_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.lib
win.x86_64.vc145.md/release/: PhysXCommon_64.lib  PhysXCooking_64.lib  PhysXFoundation_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.lib
